<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/red"
    tools:context=".SumMachine" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewTable"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/plusButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="46dp"
            android:onClick="sendMessage2"
            android:text="@string/plus" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="46dp"
            android:onClick="sendMessage2"
            android:text="@string/minus" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="46dp"
            android:onClick="sendMessage2"
            android:text="@string/multiply" />

    </LinearLayout>

    <TextView
        android:id="@+id/textScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewTable"
        android:layout_alignBottom="@+id/textViewTable"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginRight="44dp"
        android:text="@string/tables"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewTable"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"
        android:layout_toLeftOf="@+id/textScore1"
        android:gravity="center"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTable"
        android:layout_below="@+id/textScore1"
        android:text="@string/operatePick"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>